Fix octicon alignment and spacing

--- a/styles/real-time.less
+++ b/styles/real-time.less
@@ -118,6 +118,11 @@
         margin-top: @component-padding / 2;
         font-weight: lighter;
         font-size: 80%;
+
+        &::before {
+          line-height: 1em;
+          margin-right: 5px;
+        }
       }
     }
 
